    - x2goserver/bin/x2gopath.in: fix warning message to also include
      SHAREDIR.
    - x2goserver/bin/x2gopath.in: add and use support for NXLIBDIR; drop the
      lib-subdir detection.
    - x2goserver/bin/x2gopath.in: use [] instead of test, for consistency.
    - x2goserver/Makefile: remove indirections, not needed any longer and
      leading to build failures now.
  * debian/control:
    + Build-depend upon lsb-release for distro version detection.
  * debian/x2goserver.manpages:
    + Install x2gocleansessions man page.
    + Install x2goupdateoptionsstring man page.
  * x2goserver.spec:
    + Install new x2goisint wrapper.
    + Install section 1 man pages.
    + Exclude x2goagent man page from x2goserver package.
    + Pass down LIBDIR via make calls, not by modifying all source files with
      sed.
  * debian/x2goserver.install:
    + Install bin/x2goupdateoptionsstring.
  * debian/rules:
    + Export and pass down LIBDIR.
    + Fix standalone make call by specifying PREFIX, NXLIBDIR and LIBDIR
      explicitly.

  [ Oleksandr Shneyder ]
  * New upstream version (4.1.0.4):
    - Add support for X2Go KDrive.
    - x2goruncommand: start Xsession on X2Go KDrive desktops.

  [ Tom Ruzicka ]
  * debian/po: Add Czech debconf translation.

  [ Ulrich Sibiller ]
  * New upstream version (4.1.0.4):
    - x2goserver-x2goagent/etc/keystrokes.cfg: sync with nx-libs 3.5.99.20.
      Previous version was broken and incomplete. Fixes: #1388.

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Mon, 14 Jan 2019 16:33:04 +0100

x2goserver (4.1.0.3-0x2go1) unstable; urgency=medium

  [ Mike Gabriel ]
  * New upstream version (4.1.0.3)
    - x2goserver.service: Add Documentation= key.
    - x2goserver/lib/x2gocheckport: chmod a+x.
    - New bin:pkg: x2goserver-desktopsharing. Move all desktop sharing
      integration logic from x2godesktopsharing to x2goserver src:pkg.
    - Don't rely on "ln -sf" to remove a symlink before recreating it. If the